user authentication firebase

--- a/login.html
+++ b/login.html
@@ -10,36 +10,42 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/app.css" rel="stylesheet">
+    <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="form.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="form signup">
             <h2>Sign Up</h2>
+            <div id="error-message">ee</div>
+            <form onsubmit="event.preventDefault(); signUp()">
             <div class="inputbox">
                 <input type="text" required="required">
                 <i class="fa-regular fa-user"></i>
                 <span>username</span>
             </div>
             <div class="inputbox">
-                <input type="text" required="required">
+                <input type="email" id="email" required="required">
                 <i class="fa-regular fa-envelope"></i>
                 <span>email address</span>
             </div>
             <div class="inputbox">
-                <input type="password" required="required">
+                <input type="password" id="password1" required="required">
                 <i class="fa-solid fa-lock"></i>
                 <span>create password</span>
             </div>
             <div class="inputbox">
-                <input type="password" required="required">
+                <input type="password" id="password2" required="required">
                 <i class="fa-solid fa-lock"></i>
                 <span>confirm password</span>
             </div>
             <div class="inputbox">
                 <input type="submit" value="Create Account">
             </div>
-            <p>Already a member ? <a href="#" class="login">Login</a></p>
+        </form>
+            <p>Already a member ? <a href="loginform.html" class="login">Login</a></p>
         </div>
 
         <div class="form signin">
@@ -62,7 +68,7 @@
     </div>
     <script>
         let login = document.querySelector(".login");
-        let create = document.querySelector(".create");
+        let create = document.querySelector(".create"); 
         let container = document.querySelector(".container");
 
         login.onclick = function () {
