--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/app.css" rel="stylesheet">
     <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+   <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+   <script src="form.js"></script>
+    <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="http://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
     <script src="form.js"></script>
 </head>
@@ -20,7 +23,7 @@
         <div class="form signup">
             <h2>Sign Up</h2>
             <div id="error-message">ee</div>
-            <form onsubmit="event.preventDefault(); signUp()">
+            <form onsubmit=" event.preventDefault(); signUp()">
             <div class="inputbox">
                 <input type="text" required="required">
                 <i class="fa-regular fa-user"></i>
